# attitude_estimation

./: .gitignore  CMakeLists.txt  README.md  package.xml  rqt.rviz
include/attitude_estimation/: abstract_estimator.h  dcm_estimator.h  euler_estimator.h  global.h  gyro.h  quaternion_estimator.h  utils.h  visualizer.h  viz.h
launch/: test_att_est.launch
param/: imu_adis16448.yaml  rosconsole.conf
test/: test_att_est.cpp
